--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <img class="play-solid" src="img/play-solid.svg" alt="">
                 </div>
                 <div>
-                    <a class="whatch-video" href="#">Whatch Video</a>
+                    <a class="whatch-video" href="#">Watch Video</a>
                 </div>
             </div>
             <div class="fifth-row-left-seciton">
